--- a/exercises/color-palettes/css/style.css
+++ b/exercises/color-palettes/css/style.css
@@ -17,7 +17,7 @@ body {
     font-size: 5rem;
     padding: 2rem;
     color: #9b7fa4;
-    text-shadow:2px 2px orange;
+    text-shadow:2px 2px #ffa500;
 }
 
 
