--- a/demos/two-columns-mixed/css/style.css
+++ b/demos/two-columns-mixed/css/style.css
@@ -1,10 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
+
+
 * {
     box-sizing: border-box;
 }
 
 body {
     margin: 0px;
-    font-family: sans-serif; 
+    font-family: julius sans one; 
+    background: radial-gradient(
+        at top left, 
+        #8b6fad, 
+        #3d2a6b
+   );
+    
 }
 
 #grid-layout {
@@ -59,7 +68,7 @@ body {
 
 #sidebar ul a {
     text-decoration: none;
-    color: #111111;
+    color: whitesmoke;
     display: block;
     padding: 12px;
 }
@@ -78,7 +87,14 @@ body {
 
 }
 
-.metube-item .thumbnail-placeholder {
+.thumb-img {
+    width: 100%;
+    border-radius: 20%;
+    border: 4px solid #238881;
+    
+}
+
+ /* .metube-item .thumbnail-placeholder {
     background: radial-gradient(
         at top left, 
         #8b6fad, 
@@ -87,7 +103,7 @@ body {
    aspect-ratio: 16/9;
    border-radius: 8px;
  
-}
+}  */
 
 .metube-item h4 {
     margin: 8px;
@@ -95,7 +111,7 @@ body {
 
 .metube-item h4 a {
     text-decoration: none;
-    color: #238881;
+    color: whitesmoke;
     display: block;
 }
 
@@ -106,6 +122,7 @@ body {
 .metube-item .video-details {
     margin: 8px; 
     font-size: 14px;
+    color: whitesmoke;
 }
 
 .metube-item .video-channel {
