--- a/test-for-students/css/setup.css
+++ b/test-for-students/css/setup.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Acme&family=Shadows+Into+Light&display=swap');
-
 * {
     box-sizing: border-box;
 }
@@ -9,13 +7,13 @@ body {
     font-family: sans-serif;
 }
 
-#section-2 {
+#section-3 {
     padding: 24px;
     min-height: 100vh;
 }
 
-#section-2 {
-    background: url("../images/paw-prints.jpg");
+#section-3 {
+    background: url("../images/sinnoh-plain.jpg");
     background-size: cover;
     background-position: center center;
 }
@@ -26,23 +24,33 @@ body {
     align-items: flex-start;
 }
 
-#section-2 .example-card {
+#section-3 .card-container {
+    align-items: stretch;
+}
+
+#section-3 .example-card {
     max-width: 358px;
     margin: 16px;
 }
 
-.card-style-2 .animagram-header .logo {
-    font-size: 36px;
-    font-family: 'Shadows Into Light';
-    font-weight: bold;
-    display: inline-block;
-    border: 3px solid black;
-    border-radius: 50%;
-    width: 66px;
+.card-style-3 .attack .energy {
+    min-width: 50px;
     text-align: center;
 }
 
-.card-style-2 .animagram-header .brand-name {
-    font-family: 'Acme';
-    font-weight: bold;
+.card-style-3 .power {
+    min-width: 50px;
+    text-align: center;
+}
+
+.card-style-3 i {
+    background: radial-gradient(white 40%, #333333);
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    padding: 3px;
+    font-size: 14px;
 }
