--- a/test-for-students/css/style.css
+++ b/test-for-students/css/style.css
@@ -1,107 +1,38 @@
-/*
-    Write your CSS for the assignment here.
+* {
+    box-sizing: border-box;
+}
 
-    You shouldn't need to modify the HTML;
-    however, you are allowed to. 
+body {
+    margin: 0px;
+    font-family: sans-serif;
+}
+
+#hero-1 {
+    background-image: url("../images/eeyore.jpeg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+#hero-1 .hero-content {
+    position: absolute;
+    top: 10%;
+    left: 15%;
+}
+
+#hero-1 h1 {
+    font-size: 8vw;
+    margin-bottom: 5vh;
+    margin-right: 5vw;
+
+}
+
+#hero-1 h3 {
+    font-size: 3vw;
+    margin: 0px 5vw 0px 0px;
     
-    Just be aware that you may break some
-    of the setup.css styling if you do so.
-*/
-
-.card-style-3 {
-    width: 350px;
-    border: 20px solid #ffd700;
-    border-radius: 8px;
-    background-color: white;
-    display: flex;
-    padding: 10px;
-    flex-direction: column;
-    margin: 10px;
-    flex-wrap: wrap;
 }
 
-.pokemon-header {
-    display: flex;
-    align-items: baseline;
-    justify-content: space-between;
-}
-
-.pokemon-header h2 {
-    font-size: 30px;
-    margin-bottom: 0px;
-}
-
-.card-style-3 img {
-    width: 100%;
-    border: 5px solid #dca71e;
-}
-
-.details {
-    font-size: 12px;
-    font-weight: bold;
-    font-style: italic;
-    text-align: center;
-    margin-top: 7px;
-    margin-bottom: 8px;
-    background: linear-gradient(
-        to left,
-        #dca71e,
-        #ffd92e,
-        #dca71e
-    );
-}
-
-.attack {
-    border-bottom: 2px solid #111111;
-    display: flex;
-    padding-bottom: 20px;
-    padding-top: 15px;
-    align-items: center;
-}
-
-.attack .description .bold {
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.attack .power {
-    font-weight: bold;
-    font-size: 24px;
-}
-
-.data {
-    font-size: 12px;
-    font-weight: bold;
-    border: 2px solid #dca71e;
-    padding: 2px;
-    margin-top: 10px;
-}
-
-/* Card background gradients */
-#pokemon-card-1,
-#pokemon-card-2 {
-    background: linear-gradient(
-        -40deg,
-        #89e889,
-        #258d25,
-        #89e889
-    );
-}
-
-#pokemon-card-3 {
-    background: linear-gradient(
-        -40deg,
-        #ffa000,
-        #ff4700,
-        #ffa000
-    );
-}
-
-#pokemon-card-4 {
-    background: linear-gradient(
-        -40deg,
-        #06fdfe,
-        #85ceeb,
-        #06fdfe
-    );
+.spacer {
+    height:100vh;
 }
