--- a/test-for-students/css/style.css
+++ b/test-for-students/css/style.css
@@ -1,88 +1,129 @@
-/*
-    Write your CSS for the assignment here.
-
-    You shouldn't need to modify the HTML;
-    however, you are allowed to. 
-    
-    Just be aware that you may break some
-    of the setup.css styling if you do so.
-*/
-.card-style-3 {
-    width: 350px;
-    border: 20px solid rgb(240, 227, 56);
-    border-radius: 8px;
-    margin: 20px auto;
-    padding: 0px 15px;
-    display: flex;
-    flex-wrap: wrap;
+* {
+    box-sizing: border-box;
 }
 
-.pokemon-header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-size: 18px;
+body  {
+    margin: 0px;
+    font-family: sans-serif;
 }
 
-.pokemon-header .health {
-    padding-left: 60px;
-}
-
-.card-style-3 img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border: 4px solid goldenrod;
-}
-
-.card-style-3 .details {
-    background-color: goldenrod;
-    font-size: 13px;
-    font-weight: bold;
-    font-style: italic;
-    padding: 0px 5px;
-    text-align: center;
-}
-
-.card-style-3 .attack {
+#navbar-1 {
+    background-color: rgb(2, 59, 2);
     display: flex;
     align-items: center;
-    font-size: 13px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: 2px solid black;
 }
 
-.card-style-3 .bold,
-.card-style-3 .power {
-    font-weight: bold;
+#navbar-1 #logo-link {
+    margin-right: auto;
+    font-size: 26px;
+}
+
+#navbar-1 a {
+    text-decoration: none;
+    color: white;
+    padding: 24px;
+}
+
+/*NavBar Client 2*/
+
+#navbar-2  {
+    background: linear-gradient(to bottom, coral , pink);
+    display: flex;
+    align-items: center;
+}
+
+#navbar-2 a {
+    text-decoration: none;
+    color: black;
+    padding: 24px;
+}
+
+#navbar-2 #logo-link-2 {
+    margin-right: auto;
+    font-size: 26px;
+}
+
+#navbar-2 #cta-button {
+    background-color: white;
+    color:pink ;
+    border-radius: 36px;
+    padding: 16px 24px;
     font-size: 20px;
+    font-weight: bold;
+    min-width: 150px;
+    text-align: center;
+    margin-right: 24px;
+}    
+
+
+/*NavBar Client 3*/
+
+#navbar-top {
+    background: linear-gradient(to bottom, green, #3e6d3e);
 }
 
-.card-style-3 .data {
-    border: 2px solid goldenrod;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    font-size: 12px;
+#navbar-top .content-column {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}  
+
+#navbar-top a {
+    text-decoration: none;
+    color: white;
+    padding: 24px 0px;
+    text-align: center; 
+}
+
+
+
+#navbar-top {
+    padding: 10px; 
+}
+
+
+#navbar-middle #cta-button {
+    background-color: orange;
+    color: black;
+    border-radius: 30px;
+    padding: 16px 24px;
+    font-size: 20px;
+    font-weight: bold;
+    min-width: 150px;
+    text-align: center;
+    margin-left: 45px
+}
+
+#navbar-middle {
+    background: linear-gradient(to bottom, orange , yellow);
+    display: flex;
+    align-items: center;
+}
+
+#navbar-middle #logo-link-3 {
+    font-size: 26px;
     font-weight: bold;
 }
 
-#pokemon-card-1 {
-    background-color: rgb(75, 236, 83);
+#navbar-middle a {
+    text-decoration: none;
+    color: black;
+    padding: 30px;
 }
 
-/* .card-style-3 #pokemon-card-1 .details {
-    margin-top: 20px;
-} */
-
-#pokemon-card-2 {
-    background-color: rgb(47, 151, 20);
+#navbar-middle #cta-button:hover {
+    background-color: white;
+    color: orange;
+    border: 2px solid black;
 }
 
-#pokemon-card-3 {
-    background-color: rgb(231, 53, 9);
+#navbar-bottom {
+    background-color: black;
+    padding: 18px;
 }
 
-#pokemon-card-4 {
-    background-color: rgb(75, 191, 236);
+#navbar-bottom a {
+    text-decoration: none;
+    color: white;
+    padding: 30px;
 }
