--- a/test-for-students/css/style.css
+++ b/test-for-students/css/style.css
@@ -72,10 +72,12 @@ body  {
     text-decoration: none;
     color: white;
     padding: 24px 0px;
-    text-align: center; 
+ 
 }
 
-
+a {
+    margin: 
+}
 
 #navbar-top {
     padding: 10px; 
